main inspiration section done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,73 @@
         <!-- Hero section End here -->
     </header>
 
+    <main>
+        <section class="main-container">
+            <div class="main-content">
+                <h1 class="title-h1">Why Web Development??</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                    Ipsum has been the industry's standard dummy text.</p>
+
+                <!--  -->
+                <div class="main-child">
+                    <div class="child-content">
+                        <h3>I will Do Coding and Change The <br>World</h3>
+                        <p>Lorem Ipsum is simply
+                            dummy text of the printing and typesetting industry.</p>
+                        <button class="btn-main">Learn More</button>
+                    </div>
+
+                    <img src="assets/Layer_1.png" alt="">
+
+                </div>
+                <div class="main-child">
+                    <img src="assets/Group 3.png" alt="">
+
+                    <div class="child-content">
+                        <h3>I will help People by creating <br>Modern Web System</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry.</p>
+                        <button class="btn-main">Learn More</button>
+                    </div>
+
+
+                </div>
+                <div class="main-child">
+                    <div class="child-content">
+                        <h3>I will Do Coding and Change The <br>World</h3>
+                        <p>Lorem Ipsum is simply
+                            dummy text of the printing and typesetting industry.</p>
+                        <button class="btn-main">Learn More</button>
+                    </div>
+
+                    <img src="assets/Group 4.png" alt="">
+
+                </div>
+
+            </div>
+        </section>
+
+        <!-- Inspiration section start -->
+        <section class="inspiration-container">
+
+            <div class="inspiration-content">
+                <h1 class="title-h1">My Inspiration</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="inspiration-video">
+                <iframe width="1078" height="558" src="https://www.youtube.com/embed/JEAYNvLs5nQ?si=JXhqRwoed6IP2RSO"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+        <!-- Inspiration section End -->
+
+
+    </main>
+
+
 
 
 </body>
