target section done

--- a/index.html
+++ b/index.html
@@ -94,6 +94,88 @@
         </section>
         <!-- Inspiration section End -->
 
+        <!--My Current Target section Start -->
+        <section class="target-container">
+            <div class="target-content1">
+                <h1 class="title-h1">My Current Target</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text.</p>
+
+            </div>
+
+            <div class="target-content2">
+                <div class="target-child" style="background-color:rgba(255, 76, 30, 0.05);">
+                    <img src="./assets/html.png" alt="">
+                    <h1>HTML</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
+                </div>
+                <div class="target-child" style="background-color: rgba(0, 76, 232, 0.05);">
+                    <img src="./assets/css.png" alt="">
+                    <h1>CSS</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
+                </div>
+                <div class="target-child" style="background-color: rgba(255, 223, 0, 0.05);">
+                    <img src="./assets/js.png" alt="">
+                    <h1>JavaScript</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
+                </div>
+            </div>
+
+            <div class="target-content3">
+                <h1 class="title-h1">My Next Target</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+
+            <div class="target-content4">
+                <div class="target-content4-child">
+                    <img src="./assets/react.png" alt="">
+                    <div class="content">
+                        <h3>ReactJS</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+                <div class="target-content4-child">
+                    <img src="./assets/nodejs.png" alt="">
+                    <div class="content">
+                        <h3>Node JS</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+                <div class="target-content4-child">
+                    <img src="./assets/react.png" alt="">
+                    <div class="content">
+                        <h3>MongoDB</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!--My Current Target section End -->
+
+        <!-- need Support Section Start -->
+        <section class="support-container">
+            <div class="support-content">
+                <h1>I need Support</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <form action="">
+                    <input class="message-input" type="text" placeholder="Suggest me any feedback for me">
+                    <button class="input-btn">Submit</button>
+                </form>
+            </div>
+        </section>
+        <!-- need Support Section End -->
+
 
     </main>
 
