footer section done

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>Lorem Ipsum is simply dummy
                     text of the printing and typesetting industry.
                     Lorem Ipsum has been the industry's standard dummy text.</p>
-                <button> Contact with me</button>
+                <button><a href="#support" style="text-decoration: none; color: white;"> Contact with me</a></button>
             </div>
         </section>
         <!-- Hero section End here -->
@@ -164,7 +164,7 @@
         <!--My Current Target section End -->
 
         <!-- need Support Section Start -->
-        <section class="support-container">
+        <section id="support" class="support-container">
             <div class="support-content">
                 <h1>I need Support</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -179,7 +179,18 @@
 
     </main>
 
-
+    <!-- Footer Section Start here -->
+    <footer>
+        <div class="footer-content">
+            <h1>An Open Commitment by Awlad Hossain</h1>
+            <div class="social-logo">
+                <a href="https://www.facebook.com/" target="_blank"><img src="./assets/facebook.png" alt=""></a>
+                <a href="https://github.com/" target="_blank" ><img src="./assets/github.png" alt=""></a>
+                <a href="https://linkedin.com/" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer Section End here -->
 
 
 </body>
