demo lorem text trash

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="nav-container">
-                <h4>Awlad.H</h4>
+                <h4>Abdul Hasib</h4>
                 <button>Download Resume</button>
             </div>
         </nav>
@@ -22,9 +22,7 @@
             <div class="hero-content">
                 <img src="./assets/Group.png" alt="">
                 <h1>"In the near future, I hope to become a <br> Developer."</h1>
-                <p>Lorem Ipsum is simply dummy
-                    text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>I have Passionate about software developer and eager to learn and grow in a challenging role.</p>
                 <button><a href="#support" style="text-decoration: none; color: white;"> Contact with me</a></button>
             </div>
         </section>
@@ -35,16 +33,14 @@
         <section class="main-container">
             <div class="main-content">
                 <h1 class="title-h1">Why Web Development??</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                    Ipsum has been the industry's standard dummy text.</p>
+                <p>Web development is a flexible way to enter the tech industry. Web developers can work as freelancers, join a team, or start their own business. </p>
 
                 <!--  -->
                 <div class="main-child">
                     <div class="child-content">
                         <h3>I will Do Coding and Change The <br>World</h3>
-                        <p>Lorem Ipsum is simply
-                            dummy text of the printing and typesetting industry.</p>
-                        <button class="btn-main">Learn More</button>
+                        <p>I am excited about user problem solutions for website design writing code.</p>
+                        <button class="btn-main"><a href="">Learn More</a></button>
                     </div>
 
                     <img src="assets/Layer_1.png" alt="">
@@ -55,9 +51,8 @@
 
                     <div class="child-content">
                         <h3>I will help People by creating <br>Modern Web System</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and
-                            typesetting industry.</p>
-                        <button class="btn-main">Learn More</button>
+                        <p>I developed many complex systems that people problem-solve</p>
+                        <button class="btn-main"><a href="">Learn More</a></button>
                     </div>
 
 
@@ -65,9 +60,8 @@
                 <div class="main-child">
                     <div class="child-content">
                         <h3>I will Do Coding and Change The <br>World</h3>
-                        <p>Lorem Ipsum is simply
-                            dummy text of the printing and typesetting industry.</p>
-                        <button class="btn-main">Learn More</button>
+                        <p>This world is modern every single  day develop and many problems so I find the problem and solve the problem.</p>
+                        <button class="btn-main"><a href="" >Learn More</a></button>
                     </div>
 
                     <img src="assets/Group 4.png" alt="">
@@ -82,8 +76,7 @@
 
             <div class="inspiration-content">
                 <h1 class="title-h1">My Inspiration</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>This broadcast inspires me because I am no-cse student in the development industry.</p>
             </div>
             <div class="inspiration-video">
                 <iframe width="1078" height="558" src="https://www.youtube.com/embed/JEAYNvLs5nQ?si=JXhqRwoed6IP2RSO"
@@ -98,8 +91,7 @@
         <section class="target-container">
             <div class="target-content1">
                 <h1 class="title-h1">My Current Target</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>This time my target is learn HTML, CSS and JavaScript.</p>
 
             </div>
 
@@ -107,27 +99,26 @@
                 <div class="target-child" style="background-color:rgba(255, 76, 30, 0.05);">
                     <img src="./assets/html.png" alt="">
                     <h1>HTML</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <p>HyperText Markup Language (HTML) is......</p>
+                    <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">Learn More</a>
                 </div>
                 <div class="target-child" style="background-color: rgba(0, 76, 232, 0.05);">
                     <img src="./assets/css.png" alt="">
                     <h1>CSS</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <p>Cascading Style Sheets (CSS) is a style sheet language......</p>
+                    <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">Learn More</a>
                 </div>
                 <div class="target-child" style="background-color: rgba(255, 223, 0, 0.05);">
                     <img src="./assets/js.png" alt="">
                     <h1>JavaScript</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <p>JavaScript (JS) is a lightweight interpreted......</p>
+                    <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">Learn More</a>
                 </div>
             </div>
 
             <div class="target-content3">
                 <h1 class="title-h1">My Next Target</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>My future target is full stack developer So my planning is more about  technology learn.</p>
             </div>
 
             <div class="target-content4">
@@ -135,8 +126,7 @@
                     <img src="./assets/react.png" alt="">
                     <div class="content">
                         <h3>ReactJS</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <p>React is the library for web and native user interfaces. Build user interfaces out of individual pieces called components written in JavaScript.</p>
                         <a href="">Learn More</a>
                     </div>
                 </div>
@@ -144,17 +134,15 @@
                     <img src="./assets/nodejs.png" alt="">
                     <div class="content">
                         <h3>Node JS</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <p>Node.js is a cross-platform, open-source JavaScript runtime environment that can run on Windows, Linux, Unix, macOS, and more.</p>
                         <a href="">Learn More</a>
                     </div>
                 </div>
                 <div class="target-content4-child">
-                    <img src="./assets/react.png" alt="">
+                    <img src="./assets/mongodb.png" alt="">
                     <div class="content">
                         <h3>MongoDB</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <p>MongoDB is a source-available, cross-platform, document-oriented database program. Classified as a NoSQL database product, MongoDB utilizes JSON-like documents with optional schemas.</p>
                         <a href="">Learn More</a>
                     </div>
                 </div>
@@ -167,7 +155,7 @@
         <section id="support" class="support-container">
             <div class="support-content">
                 <h1>I need Support</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p>You are an expert in this technology which I learn suggest your experience and knowledge which helps me.</p>
                 <form action="">
                     <input class="message-input" type="text" placeholder="Suggest me any feedback for me">
                     <button class="input-btn">Submit</button>
@@ -182,7 +170,7 @@
     <!-- Footer Section Start here -->
     <footer>
         <div class="footer-content">
-            <h1>An Open Commitment by Awlad Hossain</h1>
+            <h1>An Open Commitment by Abdul Hasib</h1>
             <div class="social-logo">
                 <a href="https://www.facebook.com/" target="_blank"><img src="./assets/facebook.png" alt=""></a>
                 <a href="https://github.com/" target="_blank" ><img src="./assets/github.png" alt=""></a>
